# money-transit-managment

./: .dockerignore  .env.example  Dockerfile  QUICKSTART.md  README.md  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml  ruff.toml
project/django/: asgi.py  settings.py  urls.py  wsgi.py
project/settings/: constance.py  logging_config.py
supervisor/: serv.conf
templates/: base.html
templates/transit_managment/: home.html  reference_management.html  transaction_confirm_delete.html  transaction_form.html
transit_managment/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
transit_managment/management/commands/: create_sample_transactions.py  create_superuser.py  load_initial_data.py
transit_managment/migrations/: 0001_initial.py
